force-app/main/default/objects/Product_Log__c/Product_Log__c.object-meta.xml
<CustomObject>
    <label>Product Log</label>
    <nameField>
        <label>Product Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>