force-app/main/default/objects/Product_Log__c/fields/ProductExternalId__c.field-meta.xml
<CustomField>
    <fullName>ProductExternalId__c</fullName>
    <label>ProductExternalId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>