force-app/main/default/objects/Product_Log__c/fields/Rest_Logger__c.field-meta.xml
<CustomField>
    <fullName>Rest_Logger__c</fullName>
    <label>Rest Logger</label>
    <referenceTo>RestLogger__c</referenceTo>
    <relationshipLabel>Product Logs</relationshipLabel>
    <relationshipName>Product_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>