force-app/main/default/objects/Product_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Product__c</columns>
    <columns>Rest_Logger__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>